quick fix to add spacing on livestream page when theater mode is enabled

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -161,6 +161,10 @@
   }
 }
 
+.main--livestream {
+  margin-top: var(--spacing-m);
+}
+
 .main--full-width {
   @extend .main;
 
